Add interactive sequencer UI with sidechain controls

--- a/site/index.html
+++ b/site/index.html
@@ -2,8 +2,11 @@
 <html>
 <head>
 <meta charset="utf-8">
+<title>Bodzin Generator Toolkit</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
 <script type="text/javascript">const preset = JSON.parse(atob("e30="));</script>
+<script src="app.js" defer></script>
 </body>
 </html>
