--- a/site/index.html
+++ b/site/index.html
@@ -1,12 +1,244 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-<meta charset="utf-8">
-<title>Bodzin Generator Toolkit</title>
-<meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="utf-8">
+  <title>Bodzin Generator Toolkit</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <style>
+    :root {
+      color-scheme: dark;
+      --bg: #0f0f12;
+      --panel-bg: #18181d;
+      --accent: #49a9ff;
+      --border: #2a2a33;
+      --text: #f1f1f4;
+      --muted: #9a9aac;
+    }
+
+    * {
+      box-sizing: border-box;
+      font-family: "Inter", "Segoe UI", sans-serif;
+    }
+
+    body {
+      margin: 0;
+      min-height: 100vh;
+      background: radial-gradient(circle at 20% 20%, rgba(73, 169, 255, 0.15), transparent 50%),
+        radial-gradient(circle at 80% 10%, rgba(255, 73, 175, 0.12), transparent 55%),
+        var(--bg);
+      color: var(--text);
+      display: flex;
+      flex-direction: column;
+    }
+
+    .app-shell {
+      flex: 1;
+      display: flex;
+      flex-direction: column;
+    }
+
+    .app-header {
+      display: grid;
+      grid-template-columns: repeat(3, minmax(0, 1fr));
+      align-items: center;
+      gap: 1rem;
+      padding: 1.25rem clamp(1.5rem, 4vw, 3rem);
+      border-bottom: 1px solid var(--border);
+      background: rgba(24, 24, 29, 0.9);
+      backdrop-filter: blur(8px);
+      position: sticky;
+      top: 0;
+      z-index: 10;
+    }
+
+    .header-group {
+      display: flex;
+      align-items: center;
+      gap: 0.75rem;
+      flex-wrap: wrap;
+    }
+
+    .btn {
+      appearance: none;
+      border: 1px solid transparent;
+      border-radius: 999px;
+      padding: 0.55rem 1.25rem;
+      font-size: 0.95rem;
+      font-weight: 600;
+      letter-spacing: 0.02em;
+      background: rgba(255, 255, 255, 0.04);
+      color: var(--text);
+      transition: transform 0.15s ease, background 0.15s ease, border 0.15s ease;
+      cursor: pointer;
+    }
+
+    .btn:hover {
+      transform: translateY(-1px);
+      background: rgba(255, 255, 255, 0.08);
+    }
+
+    .btn:active {
+      transform: translateY(1px);
+    }
+
+    .btn-primary {
+      background: var(--accent);
+      color: #020205;
+      box-shadow: 0 8px 24px rgba(73, 169, 255, 0.35);
+      border-color: rgba(73, 169, 255, 0.45);
+    }
+
+    .btn-outline {
+      border-color: var(--border);
+    }
+
+    .toggle {
+      display: inline-flex;
+      align-items: center;
+      gap: 0.6rem;
+      padding: 0.4rem 0.9rem;
+      border: 1px solid var(--border);
+      border-radius: 999px;
+      background: rgba(255, 255, 255, 0.03);
+      cursor: pointer;
+      font-weight: 600;
+    }
+
+    .toggle input {
+      accent-color: var(--accent);
+    }
+
+    .app-layout {
+      flex: 1;
+      display: grid;
+      grid-template-columns: 320px 1fr;
+      gap: 1.5rem;
+      padding: 1.5rem clamp(1.5rem, 4vw, 3rem) 2.5rem;
+    }
+
+    .sidebar {
+      background: rgba(24, 24, 29, 0.85);
+      border: 1px solid var(--border);
+      border-radius: 1.25rem;
+      padding: 1.25rem;
+      display: flex;
+      flex-direction: column;
+      gap: 1rem;
+    }
+
+    #controls {
+      flex: 1;
+      display: grid;
+      gap: 1rem;
+    }
+
+    .main-panel {
+      display: flex;
+      flex-direction: column;
+      gap: 1.25rem;
+    }
+
+    .timeline-card {
+      flex: 1;
+      background: rgba(24, 24, 29, 0.85);
+      border: 1px solid var(--border);
+      border-radius: 1.5rem;
+      padding: 1.5rem;
+      display: flex;
+      flex-direction: column;
+      gap: 1rem;
+      min-height: 380px;
+    }
+
+    .timeline-header {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
+
+    #sectionLabel {
+      font-size: 1.1rem;
+      font-weight: 600;
+      color: var(--accent);
+    }
+
+    #status {
+      font-size: 0.9rem;
+      color: var(--muted);
+      font-weight: 500;
+    }
+
+    #timeline {
+      width: 100%;
+      flex: 1;
+      background: rgba(8, 8, 11, 0.6);
+      border: 1px dashed rgba(73, 169, 255, 0.3);
+      border-radius: 1rem;
+    }
+
+    @media (max-width: 1024px) {
+      .app-header {
+        grid-template-columns: repeat(2, minmax(0, 1fr));
+      }
+
+      .app-layout {
+        grid-template-columns: 1fr;
+      }
+
+      .sidebar {
+        order: 2;
+      }
+    }
+
+    @media (max-width: 720px) {
+      .app-header {
+        grid-template-columns: 1fr;
+      }
+
+      .header-group {
+        justify-content: center;
+      }
+    }
+  </style>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/tone/14.8.39/Tone.min.js"></script>
 </head>
 <body>
-<script type="text/javascript">const preset = JSON.parse(atob("e30="));</script>
-<script src="app.js" defer></script>
+  <div class="app-shell">
+    <header class="app-header">
+      <div class="header-group" aria-label="Transport">
+        <button id="startButton" class="btn btn-primary">Start</button>
+        <button id="stopButton" class="btn btn-outline">Stop</button>
+      </div>
+      <div class="header-group" aria-label="Presets">
+        <button id="savePresetButton" class="btn">Save Preset</button>
+        <button id="loadPresetButton" class="btn">Load Preset</button>
+      </div>
+      <div class="header-group" aria-label="Integrations">
+        <label class="toggle" for="midiLearnToggle">
+          <input type="checkbox" id="midiLearnToggle">
+          MIDI Learn
+        </label>
+        <button id="exportMixButton" class="btn">Export Mix</button>
+        <button id="exportStemsButton" class="btn">Export Stems</button>
+      </div>
+    </header>
+    <div class="app-layout">
+      <aside class="sidebar">
+        <h2>Sound Controls</h2>
+        <div id="controls"></div>
+      </aside>
+      <main class="main-panel">
+        <section class="timeline-card">
+          <div class="timeline-header">
+            <div id="sectionLabel">Section: Intro</div>
+            <div id="status">Status: Idle</div>
+          </div>
+          <canvas id="timeline" width="1200" height="240" aria-label="Arrangement timeline"></canvas>
+        </section>
+      </main>
+    </div>
+  </div>
+  <script type="text/javascript">const preset = JSON.parse(atob("e30="));</script>
+  <script src="app.js" defer></script>
 </body>
 </html>
